bootstrap/model-serving/images-puller.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: image-puller-workbench
  namespace: rhods-notebooks
  labels:
    k8s-app: image-puller
  annotations:
    argocd.argoproj.io/managed-by: openshift-gitops
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      name: image-puller
  template:
    metadata:
      labels:
        name: image-puller
    spec:
      containers:
      - name: puller-anythingllm
        image: image-registry.openshift-image-registry.svc:5000/redhat-ods-applications/is-anythingllm:1.7.5
        command: ["tail"]
        args: ["-f", "/dev/null"]
        resources:
          limits:
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 10Mi
---
