bootstrap/model-serving/3scale-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: 3scale
  namespace: llm-hosting
  annotations:
    argocd.argoproj.io/managed-by: openshift-gitops
    argocd.argoproj.io/sync-wave: "1"
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: 3scale
  policyTypes:
    - Ingress
